[gd_scene load_steps=13 format=2]

[ext_resource path="res://objects/ui/PlayJar.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/ui/QuitJar.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/ui/MoreWaysJar.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/ui/OptionsJar.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/LeanCamera.tscn" type="PackedScene" id=5]
[ext_resource path="res://images/ui/1x/CheckChecked.png" type="Texture" id=6]
[ext_resource path="res://images/ui/1x/Check.png" type="Texture" id=7]
[ext_resource path="res://fonts/Comfortaa-VariableFont_wght.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://images/ui/1x/Handle.png" type="Texture" id=9]
[ext_resource path="res://objects/Menu.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 1
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 35
outline_size = 1
font_data = ExtResource( 8 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1024.0
margin_right = -64.0
margin_bottom = 540.0
color = Color( 1, 1, 1, 0.0627451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainPage" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayJar" parent="MainPage" instance=ExtResource( 1 )]
margin_left = 488.0
margin_top = 144.0
margin_right = 488.0
margin_bottom = 144.0

[node name="MoreWaysJar" parent="MainPage" instance=ExtResource( 3 )]
margin_left = 488.0
margin_top = 400.0
margin_right = 488.0
margin_bottom = 400.0

[node name="Options" parent="MainPage" instance=ExtResource( 4 )]
margin_left = 248.0
margin_top = 384.0
margin_right = 248.0
margin_bottom = 384.0

[node name="QuitJar" parent="MainPage" instance=ExtResource( 2 )]
margin_left = 760.0
margin_top = 392.0
margin_right = 760.0
margin_bottom = 392.0

[node name="OptionsPage" type="Control" parent="."]
margin_left = -1024.0
margin_right = -984.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OptionsPage"]
margin_top = 8.0
margin_right = 960.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "Screen Shake"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="OptionsPage"]
margin_top = 88.0
margin_right = 960.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 1 )
text = "Sound Master"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="OptionsPage"]
margin_left = 132.0
margin_top = 200.0
margin_right = 516.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 2 )
text = "Open Dyslexic:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="OptionsPage"]
margin_left = 132.0
margin_top = 264.0
margin_right = 516.0
margin_bottom = 321.0
custom_fonts/font = SubResource( 2 )
text = "Mouse Lock:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="OptionsPage"]
margin_left = 132.0
margin_top = 328.0
margin_right = 516.0
margin_bottom = 385.0
custom_fonts/font = SubResource( 2 )
text = "Camera Tilt:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="OptionsPage"]
margin_left = 132.0
margin_top = 392.0
margin_right = 516.0
margin_bottom = 449.0
custom_fonts/font = SubResource( 2 )
text = "Fullscreen:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DyslexicCheck" type="CheckBox" parent="OptionsPage"]
margin_left = 72.0
margin_top = 205.0
margin_right = 138.0
margin_bottom = 271.0
rect_scale = Vector2( 0.603096, 0.603096 )
focus_mode = 0
custom_icons/checked = ExtResource( 6 )
custom_icons/unchecked = ExtResource( 7 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseLockCheck" type="CheckBox" parent="OptionsPage"]
margin_left = 72.0
margin_top = 268.0
margin_right = 138.0
margin_bottom = 334.0
rect_scale = Vector2( 0.603096, 0.603096 )
focus_mode = 0
custom_icons/checked = ExtResource( 6 )
custom_icons/unchecked = ExtResource( 7 )
pressed = true
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraTiltCheck" type="CheckBox" parent="OptionsPage"]
margin_left = 72.0
margin_top = 330.0
margin_right = 138.0
margin_bottom = 396.0
rect_scale = Vector2( 0.603096, 0.603096 )
focus_mode = 0
custom_icons/checked = ExtResource( 6 )
custom_icons/unchecked = ExtResource( 7 )
pressed = true
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenCheck" type="CheckBox" parent="OptionsPage"]
margin_left = 72.0
margin_top = 392.0
margin_right = 138.0
margin_bottom = 458.0
rect_scale = Vector2( 0.603096, 0.603096 )
focus_mode = 0
custom_icons/checked = ExtResource( 6 )
custom_icons/unchecked = ExtResource( 7 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenshakeSlider" type="HSlider" parent="OptionsPage"]
margin_left = 64.0
margin_top = 56.0
margin_right = 896.0
margin_bottom = 72.0
focus_mode = 0
custom_icons/grabber = ExtResource( 9 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundSlider" type="HSlider" parent="OptionsPage"]
margin_left = 64.0
margin_top = 136.0
margin_right = 896.0
margin_bottom = 152.0
focus_mode = 0
custom_icons/grabber = ExtResource( 9 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeanCamera" parent="." instance=ExtResource( 5 )]
position = Vector2( -544, 272 )
