extends Control

onready var dyslexic_check = $OptionsPage/DyslexicCheck
onready var mouselock_check = $OptionsPage/MouseLockCheck
onready var camera_tilt_check = $OptionsPage/CameraTiltCheck
onready var fullscreen_check = $OptionsPage/FullscreenCheck

func _ready():
	pass

func _process(delta):
	
	# Options
#	Options.camera_tilt = camera_tilt_check.pressed
	pass
